--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -20,18 +20,18 @@ const { title } = Astro.props;
 
     <!-- BACKGROUND IMAGE -->
     <div class="w-full h-full fixed top-0 left-0">
-	    <div class="bg-rainier bg-cover bg-center opacity-40 w-full h-full fixed top-0 left-0"></div>
 	    <div class="bg-main-color w-full h-full fixed top-0 left-0"></div>
+      <div class="bg-site opacity-20 w-full h-full fixed top-0 left-0"></div>
     </div>
 
     <div class="w-full h-full absolute top-0 left-0 flex flex-col justify-between">
       <!-- HEADER -->
-      <header class="w-full px-6">
+      <header class="w-full px-6 max-w-screen-xl w-full mx-auto px-3 sm:px-6">
         <Header />
       </header>
 
       <!-- MAIN -->
-      <main class="max-w-screen-xl my-4 sm:my-8 px-3 sm:px-6 w-full mx-auto">
+      <main class="max-w-screen-xl py-4 sm:py-8 px-3 sm:px-6 w-full mx-auto bg-main-color bg-opacity-80">
         <slot />
       </main>
 
