--- a/src/components/BaseHead/Fonts.astro
+++ b/src/components/BaseHead/Fonts.astro
@@ -3,5 +3,5 @@
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Poppins:wght@400;600&family=Teko:wght@500&display=swap" rel="stylesheet"> -->
 
 <style>
-	@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Poppins:wght@400;600&family=Teko:wght@500&display=swap');
+	@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Alatsi&family=Poppins:wght@400;600&display=swap');
 </style>
