--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -15,7 +15,7 @@ const golden_dino = true;
 
       <!-- SPONSORS -->
       <div class="flex flex-col items-center w-full sm:w-1/2 mb-2 sm:mb-0">
-        <h3 class="font-emphasis text-gray-400 text-3xl sm:text-4xl sm:mb-2">SPONSORS</h3>
+        <h3 class="font-emphasis text-main-color-50 text-2xl sm:text-3xl mb-2 sm:mb-3 md:mb-4 tracking-wide">SPONSORS</h3>
         <div class="flex flex-wrap justify-around align-center sm:w-3/4 items-center">
           <div class="mx-2 mb-3">
             <a class="rounded block" href="{ sponsors.kuow.link }" rel="noopener">
