Misc touchups and fixes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,11 +25,11 @@ const postColumns = (index) => {
     <section itemscope itemtype="https://schema.org/Event" class="sm:col-span-3 content-container" >
       <div class="flex flex-col justify-between items-center h-full text-2xl sm:text-3xl font-emphasis font-medium tracking-wide">
         <span class="block text-title-primary-color text-center mb-2 hidden md:block" itemprop="name">
-          HONK! FEST WEST
+          <span class="text-white">HONK!</span> FEST WEST
         </span>
-        <span class="block text-accent-color tracking-normal sm:mb-2 text-center">
+        <a href="/assets/ical/hfw2021.ics" class="block text-accent-color tracking-normal sm:mb-2 text-center">
           SAVE THE DATE » <time itemprop="startDate" class="underline" content="2021-09-18">SEPTEMBER 18TH, 2021</time>
-        </span>
+        </a>
         <span class="block text-title-primary-color text-center hidden md:block" itemprop="location">
           COLUMBIA CITY, SEATTLE, WA
         </span>
