--- a/src/components/post-blurb/OneColTemplate.astro
+++ b/src/components/post-blurb/OneColTemplate.astro
@@ -12,7 +12,7 @@ const {post} = Astro.props;
 	<div class="flex-1">
 		<a class="block w-full flex-none mb-3" href={post.external_url || post.astro.url}>
 			<Image 
-				className="max-h-[245px] w-auto border-2 border-accent-color mx-auto" 
+				className="max-h-[245px] w-auto border-2 rounded border-accent-color border-opacity-80 hover:border-opacity-100 mx-auto" 
 				src={post.image_url}
 				alt={`${post.title} ${post.subtitle}`}
 				height="245"
