--- a/src/components/post-blurb/TwoColTemplate.astro
+++ b/src/components/post-blurb/TwoColTemplate.astro
@@ -12,7 +12,7 @@ const {post} = Astro.props;
 	<div class="flex-1 grid grid-cols-2 gap-3 lg:gap-6 mb-3">
 		<a class="block h-full" href={post.external_url || post.astro.url}>
 			<Image 
-				className="max-h-[245px] w-auto border-2 border-accent-color" 
+				className="max-h-[245px] w-auto border-2 border-accent-color border-opacity-80 hover:border-opacity-100 rounded" 
 				src={post.image_url}
 				alt={`${post.title} ${post.subtitle}`}
 				height="245"
