Misc touchups and fixes

--- a/public/style/global.css
+++ b/public/style/global.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .content-container {
-  @apply bg-gray-100 p-3 sm:p-5 rounded overflow-hidden bg-opacity-20 border-4 border-main-color-400 border-opacity-50;
+  @apply bg-main-color-200 p-3 sm:p-5 rounded overflow-hidden bg-opacity-30 border-4 border-main-color-300 border-opacity-50;
 }
 
 .content,
