--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -7,7 +7,7 @@ import navigation from '@data/navigation.json';
 
 const golden_dino = true;
 ---
-<div class="bg-content-container bg-opacity-90">
+<div class="bg-main-color-400 bg-opacity-80">
 
   <!-- SPONSORS -->
   <div class="border-t-4 border-b-4 border-main-color-400 ">
