--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -11,11 +11,11 @@ import committee from '@data/committee.json'
 	<!-- EMAIL ADDRESSES -->
 	<div class="content-container mb-6 sm:mb-10 flex">
 		<img class="hidden md:block w-28 ml-auto" src='https://ik.imagekit.io/thegoldendino/hfw/festival/2021/goose_4tJV6uU5mRQ.png?updatedAt=1628928771447' alt="Goose with drum"/>
-		<dl class="mx-auto w-2/3 lg:w-1/2 grid grid-cols-1 sm:grid-cols-2">
+		<dl class="ml-16 md:ml-20 lg:ml-28 mr-auto w-2/3  grid grid-cols-1 sm:grid-cols-2">
 			{Object.keys(emails).map((email) => (
 				<>
-					<dt class="content sm:p-2">{emails[email].name}:</dt>
-					<dd class="content pb-2 sm:p-2">
+					<dt class="sm:p-2 font-base antialiased text-gray-300 leading-7 text-lg sm:text-xl flex-1">{emails[email].name}:</dt>
+					<dd class="content pb-2 sm:p-2 font-base antialiased text-gray-300 leading-7 text-lg sm:text-xl">
 						<a href={`mailto:${emails[email].email}`}>
 							{emails[email].email}
 						</a>
@@ -26,21 +26,21 @@ import committee from '@data/committee.json'
 	</div>
 
 	<!-- COMMITTEE -->
-	<h2 class="content-container font-emphasis text-5xl text-main-color-100 text-center tracking-wide mb-6 hidden sm:block">
+	<h2 class="font-emphasis text-4xl text-main-color-100 text-center tracking-wide mb-8 hidden sm:block">
 		YOUR
 		<span class="text-accent-color">HONK! FEST WEST</span>
 		COMMITTEE
 	</h2>
-	<div class="flex flex-wrap justify-around mx-1 sm:-mx-3 -mb-3 sm:-mb-6">
+	<div class="flex flex-wrap justify-around sm:-mx-3 -mb-3 sm:-mb-6">
 		{Object.keys(committee).map((position) => (
-			<div class="content-container w-full sm:w-[184px] mx-1 sm:mx-3 mb-3 sm:mb-6 flex flex-col items-center">
+			<div class="w-[184px] sm:mx-3 mb-6 sm:mb-12 flex flex-col items-center">
 				<Image 
 					className="rounded-full h-36 mb-2" 
 					src={committee[position].image_url} alt={committee[position].name}
 					width="150"
 					height="150"
 				/>
-				<h3 class="font-emphasis text-2xl uppercase text-accent-color text-center">{position}</h3>
+				<h3 class="font-emphasis text-2xl uppercase text-main-color-50 text-center">{position}</h3>
 				<p class="content text-center">{committee[position].name}</p>
 			</div>
 		))}
