--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const postColumns = (index) => {
     <section itemscope itemtype="https://schema.org/Event" class="sm:col-span-3 content-container" >
       <div class="flex flex-col justify-between items-center h-full text-2xl sm:text-3xl font-emphasis font-medium tracking-wide">
         <span class="block text-title-primary-color text-center mb-2 hidden md:block" itemprop="name">
-          <span class="text-white">HONK!</span> FEST WEST
+          <span class="text-gray-300">HONK!</span> FEST WEST
         </span>
         <a href="/assets/ical/hfw2021.ics" class="block text-accent-color tracking-normal sm:mb-2 text-center">
           SAVE THE DATE » <time itemprop="startDate" class="underline" content="2021-09-18">SEPTEMBER 18TH, 2021</time>
@@ -38,8 +38,8 @@ const postColumns = (index) => {
 
     <!-- NEWSLETTER BLOCK -->
     <section class="sm:col-span-3 content-container">
-      <div class="flex flex-col items-center h-full justify-center text-2xl sm:text-3xl font-emphasis font-medium">
-        <span class="block text-title-primary-color md:mb-2 tracking-wide">
+      <div class="flex flex-col items-center h-full justify-center font-emphasis font-medium">
+        <span class="block text-title-primary-color mb-2 tracking-wide text-2xl md:text-3xl">
           NEWSLETTER
         </span>
         <form 
@@ -53,7 +53,7 @@ const postColumns = (index) => {
 
           <div id="mc_embed_signup_scroll" class="flex flex-col justify-center items-center w-full">
             <div class="hidden md:flex w-full md:mb-4 justify-center items-center">
-              <label class="text-gray-400 mr-2 mb-0 block text-center" for="mce-EMAIL">
+              <label class="text-gray-300 mr-2 mb-0 block text-center text-2xl md:text-3xl" for="mce-EMAIL">
                 EMAIL:
               </label>
               <input type="email" value="" name="EMAIL" class="bg-white bg-opacity-70 block w-full font-base text-lg px-2 py-1" id="mce-EMAIL">
