--- a/src/pages/donate.astro
+++ b/src/pages/donate.astro
@@ -8,8 +8,8 @@ import sponsors from '@data/sponsors.json'
 ---
 
 <BaseLayout title="Donate">
-	<div class="flex flex-wrap md:flex-nowrap">
-		<div class="w-full md:w-1/3 md:pr-3 mb-3">
+	<div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
+		<div class="w-full md:w-1/3">
 			<div class="content-container">
 				<Title title="Donate" subtitle="Here" center={true} />
 				<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest" class="block">
@@ -24,7 +24,7 @@ import sponsors from '@data/sponsors.json'
 				</a>
 			</div>
 		</div>
-		<div class="w-full md:w-2/3 md:pl-3">
+		<div class="w-full md:w-2/3">
 			<div class="content-container">
 				<div class="content">
 					<Markdown>
