--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -15,7 +15,7 @@ import sponsors from '@data/sponsors.json'
 
 <BaseLayout title="Sponsors">
 	<!-- INTRO -->
-	<article class="content-container mb-3 sm:mb-6">
+	<article class="content-container mb-4 sm:mb-6">
 		<p class="content">
 			<Markdown>
 				Strong support from business donors will be the key to our success. Your tax-deductible contribution will help to pay for the many expenses and logistics associated with this amazing event.
@@ -25,11 +25,11 @@ import sponsors from '@data/sponsors.json'
 		</p>
 	</article>
 
-	<div class="flex flex-wrap md:flex-nowrap">
-		<div class="w-full md:w-2/3 md:pr-3">
+	<div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
+		<div class="w-full md:w-2/3 flex flex-col gap-4 sm:gap-6">
 
 			<!-- READY TO PARTICIPATE? -->
-			<article class="content-container mb-3 sm:mb-6">
+			<article class="content-container">
 				<Title title="Ready to Participate?"/>
 				<p class="content">
 					<Markdown>
@@ -46,7 +46,7 @@ import sponsors from '@data/sponsors.json'
 				</p>
 			</article>
 
-			<article class="content-container mb-3 sm:mb-6">
+			<article class="content-container">
 				<Title title="Arts Support Organizations"/>
 				<p class="content">
 					<Markdown>
@@ -87,7 +87,7 @@ import sponsors from '@data/sponsors.json'
 		</div>
 
 		<!-- SPONSORSHIP LEVELS -->
-		<div class="w-full md:w-1/3 md:pl-3">
+		<div class="w-full md:w-1/3">
 			<div class="content-container">
 				<Title title="Sponsorship Levels" center={true} />
 
