--- a/src/pages/volunteer.astro
+++ b/src/pages/volunteer.astro
@@ -10,8 +10,8 @@ import committee from '@data/committee.json'
 ---
 
 <BaseLayout title="Volunteer">
-	<div class="flex flex-wrap md:flex-nowrap">
-		<div class="w-full md:w-1/3 md:pr-3 mb-3">
+	<div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
+		<div class="w-full md:w-1/3">
 			<div class="content-container">
 				<Title title="Sign Up" center={true} />
 				<Image 
@@ -31,8 +31,8 @@ import committee from '@data/committee.json'
 			
 			</div>
 		</div>
-		<div class="w-full md:w-2/3 md:pl-3">
-			<div class="content-container mb-3 sm:mb-6">
+		<div class="w-full md:w-2/3 flex flex-col gap-4 sm:gap-6">
+			<div class="content-container">
 				<Title title="HONK! Fest West" subtitle="NEEDS YOU!!!"/>
 				<div class="content">
 					<Markdown>
@@ -45,7 +45,7 @@ import committee from '@data/committee.json'
 			</div>
 
 			{Object.keys(positions).map((position) => (
-				<div class="content-container mb-3 sm:mb-6">
+				<div class="content-container">
 					<Title title={position} subtitle={positions[position].type.length ? `| ${positions[position].type}` : ''} />
 					<p>
 						<Markdown content={positions[position].description}/>
