PostBlurb | Tone down button color

--- a/src/components/post-blurb/OneColTemplate.astro
+++ b/src/components/post-blurb/OneColTemplate.astro
@@ -30,7 +30,7 @@ const {post} = Astro.props;
 		<div class="hidden lg:block content font-base antialiased text-gray-700 leading-7 text-base sm:text-lg w-full">
 			<Markdown content={post.astro.source} />
 		</div>
-		<a class="block font-base rounded antialiased text-white font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-90 px-2 hover:bg-opacity-100" href={post.external_url}>
+		<a class="block font-base rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90" href={post.external_url}>
 			» {post.more_display}	
 		</a>
 	</div>
