--- a/src/pages/volunteer.astro
+++ b/src/pages/volunteer.astro
@@ -14,13 +14,15 @@ import committee from '@data/committee.json'
 		<div class="w-full md:w-1/3">
 			<div class="content-container">
 				<Title title="Sign Up" center={true} />
-				<Image 
-					className="w-2/3 mx-auto my-4 border-8 border-accent-color rounded border-opacity-60" 
-					src={committee["Volunteer Coordinator"].image_url} 
-					alt="Katie our Volunteer Coordinator"
-					width="239"
-					height="239"
-				/>
+				<a href="https://forms.gle/HBRe9LNspCbGxHoG8" class="block w-2/3 mx-auto my-4 border-2 rounded border-accent-color border-opacity-80 hover:border-opacity-100">
+					<Image 
+						className="w-full" 
+						src={committee["Volunteer Coordinator"].image_url} 
+						alt="Katie our Volunteer Coordinator"
+						width="239"
+						height="239"
+					/>
+				</a>
 				<p class="content">
 					<Markdown>
 						Katie our HONK! Fest West Volunteer Coordinator would LOVE to hear from you!
