Header | Fix spacing between logo and nav

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,7 +21,7 @@ const activeLink = (link) => {
 	</a>
 </div>
 
-<nav class="w-full bg-main-color bg-opacity-10 pb-4 sm:pt-5">
+<nav class="w-full bg-main-color bg-opacity-10 pb-4">
 	<ul class="flex flex-wrap justify-center items-center w-full">
 
 		<!-- MAIN NAV -->
