--- a/src/components/base-head/BaseHead.astro
+++ b/src/components/base-head/BaseHead.astro
@@ -1,9 +1,9 @@
 ---
-import Google from '$components/BaseHead/Google.astro'
-import MailChimp from '$components/BaseHead/MailChimp.astro'
-import OpenGraph from '$components/BaseHead/OpenGraph.astro'
-import Fonts from '$components/BaseHead/Fonts.astro'
-import Analytics from '$components/BaseHead/Analytics.astro'
+import Google from './Google.astro'
+import MailChimp from './MailChimp.astro'
+import OpenGraph from './OpenGraph.astro'
+import Fonts from './Fonts.astro'
+import Analytics from './Analytics.astro'
 
 const { title = '' } = Astro.props;
 ---
