--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,5 @@
 ---
-import Head from '$components/BaseHead.astro'
+import Head from '$components/base-head/BaseHead.astro'
 import Header from '$components/Header.astro'
 import Footer from '$components/Footer.astro'
 
