--- a/src/components/base-head/BaseHead.astro
+++ b/src/components/base-head/BaseHead.astro
@@ -1,9 +1,7 @@
 ---
-import Google from './Google.astro'
-import MailChimp from './MailChimp.astro'
 import OpenGraph from './OpenGraph.astro'
 import Fonts from './Fonts.astro'
-import Analytics from './Analytics.astro'
+import NetlifyIdentity from './NetlifyIdentity.astro'
 
 const { title = '' } = Astro.props;
 ---
@@ -15,11 +13,9 @@ const { title = '' } = Astro.props;
 	content="HONK! Fest West is an accessible community music festival driven by the energetic performances of street bands in public spaces."
 />
 
-<Analytics />
-<Google />
 <Fonts />
-<MailChimp />
 <OpenGraph />
+<NetlifyIdentity />
 
 <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="/style/global.css">
