--- a/src/components/post-blurb/OneColTemplate.astro
+++ b/src/components/post-blurb/OneColTemplate.astro
@@ -2,6 +2,7 @@
 import { Markdown } from 'astro/components'
 import Title from '$components/Title.astro'
 import Image from '$components/Image.astro'
+import DateTime from './DateTime.astro'
 
 const {post} = Astro.props;
 ---
@@ -19,8 +20,7 @@ const {post} = Astro.props;
 				/>
 		</a>
 		<div class="flex flex-wrap justify-around md:block content font-bold w-full">
-			<span class="block">{post.date}</span>
-			<span class="block">{post.time}</span>
+			<DateTime start={post.start_datetime} end={post.end_datetime} className="block" />
 			<a class="block mb-3" href={post.location_url}>
 				{post.location_display}
 			</a>
