--- a/src/components/post-blurb/ThreeColTemplate.astro
+++ b/src/components/post-blurb/ThreeColTemplate.astro
@@ -2,6 +2,7 @@
 import { Markdown } from 'astro/components'
 import Title from '$components/Title.astro'
 import Image from '$components/Image.astro'
+import DateTime from './DateTime.astro'
 
 const {post} = Astro.props;
 ---
@@ -21,8 +22,7 @@ const {post} = Astro.props;
 				/>
 		</a>
 		<div class="flex flex-col justify-center lg:justify-start content font-bold w-full h-full">
-			<span class="block text-center lg:text-left w-full">{post.date}</span>
-			<span class="block text-center lg:text-left w-full">{post.time}</span>
+			<DateTime start={post.start_datetime} end={post.end_datetime} className="block text-center lg:text-left w-full"/>
 			<a class="block text-center lg:text-left w-full" href={post.location_url}>
 				{post.location_display}
 			</a>
