--- a/public/style/global.css
+++ b/public/style/global.css
@@ -4,7 +4,7 @@
 
 :root {
   --main-color: rgba(32, 41, 69, 1);
-  --main-color-transparent: rgb(32, 41, 69, 0.7);
+  --main-color-transparent: rgba(32, 41, 69, 0.8);
 }
 
 .content-container {
@@ -36,7 +36,7 @@ p a {
 .gradient-radial-background {
   background-image: radial-gradient(
     circle at bottom,
-    rgba(32, 41, 69, 0.8),
+    var(--main-color),
     rgba(32, 41, 69, 0) 90%
   );
 }
