--- a/src/pages/volunteer.astro
+++ b/src/pages/volunteer.astro
@@ -5,8 +5,10 @@ import BaseLayout from '@layouts/BaseLayout.astro'
 import Title from '$components/Title.astro'
 import Image from '$components/Image.astro'
 
-import positions from '@data/volunteer-positions.json'
 import committee from '@data/committee.json'
+import volunteer_data from '@data/volunteer.json'
+
+const positions = volunteer_data.positions
 ---
 
 <BaseLayout title="Volunteer">
@@ -14,7 +16,7 @@ import committee from '@data/committee.json'
 		<div class="w-full md:w-1/3">
 			<div class="content-container">
 				<Title title="Sign Up" center={true} />
-				<a href="https://forms.gle/HBRe9LNspCbGxHoG8" class="block w-2/3 mx-auto my-4 border-2 rounded border-accent-color border-opacity-80 hover:border-opacity-100">
+				<a href={volunteer_data.form_url} class="block w-2/3 mx-auto my-4 border-2 rounded border-accent-color border-opacity-80 hover:border-opacity-100">
 					<Image 
 						className="w-full" 
 						src={committee["Volunteer Coordinator"].image_url} 
@@ -24,11 +26,9 @@ import committee from '@data/committee.json'
 					/>
 				</a>
 				<p class="content">
-					<Markdown>
-						Katie our HONK! Fest West Volunteer Coordinator would LOVE to hear from you!
-						<br/>
-						Please [» APPLY HERE](https://forms.gle/HBRe9LNspCbGxHoG8)
-					</Markdown>
+					Katie our HONK! Fest West Volunteer Coordinator would LOVE to hear from you!
+					<br/>
+					Please <a href={volunteer_data.form_url}>» APPLY HERE</a>
 				</p>
 			
 			</div>
