Sponsors | Fix Sponsorship levels

--- a/src/pages/sponsors.astro
+++ b/src/pages/sponsors.astro
@@ -144,7 +144,7 @@ import sponsors from '@data/sponsors.json'
 
 				<!-- BAND BOOSTER -->
 				<h3 class="sponsor-level-title">
-					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=500">HORN STAR</a>
+					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=500">BAND BOOSTER</a>
 					<span class="text-main-color-50"> $500</span>
 				</h3>
 				<div class="content mb-5">
@@ -156,7 +156,7 @@ import sponsors from '@data/sponsors.json'
 
 				<!-- IN-KIND CONTRIBUTION -->
 				<h3 class="sponsor-level-title">
-					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest/Donate?t=500">IN-KIND CONTRIBUTION</a>
+					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest">IN-KIND CONTRIBUTION</a>
 				</h3>
 				<div class="content">
 					<Markdown>				
