--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,7 @@
 ---
 import SocialLinks from '$components/SocialLinks'
 import Image from '$components/Image'
+import GoldenDino from './GoldenDino.svelte'
 
 import sponsors from '@data/sponsors.json'
 import navigation from '@data/navigation.json';
@@ -70,6 +71,7 @@ const golden_dino = true;
       </li>
     ))}
   </ul>
+  <GoldenDino client:visible />
   <a class="w-full text-center font-base link text-accent-color font-bold text-lg block w-full sm:w-1/3 m-1 sm:m-4" href="#">
     Back to top
   </a>
