--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,7 +16,7 @@ const { title } = Astro.props;
     </Head>
   </head>
 
-  <body class="min-h-full n">
+  <body class="min-h-full">
 
     <!-- BACKGROUND IMAGE -->
     <div class="w-full h-full fixed top-0 left-0">
