--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -12,16 +12,23 @@ import sponsors from '@data/sponsors.json'
 		<div class="w-full md:w-1/3">
 			<div class="content-container">
 				<Title title="Donate" subtitle="Here" center={true} />
-				<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest" class="block">
-					<Image 
-						className="rounded mx-auto p-2 w-auto h-20 bg-[#f4efdf] border-accent-color border-2" 
-						src={sponsors.shunpike.image} 
-						alt={sponsors.shunpike.name}
-						width="180"
-						height="34"
-						raw={true}
-					/>
-				</a>
+				<div class="flex flex-col items-center">
+					<a href="https://www.paypal.com/donate/?hosted_button_id=EE2WLALDX9GCA" class="block flex items-center mb-5 py-3 px-5 rounded-full bg-main-color-200">
+						<i class="paypal mr-2"></i> <span class="block text-lg content">Donate with PayPal</span>
+					</a>
+					<span class="content mb-2 text-center">Tax deductable donation link:</span>
+					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest" class="block">
+						<Image 
+							className="rounded mx-auto p-2 w-auto h-18 bg-[#f4efdf] border-accent-color border-2" 
+							src={sponsors.shunpike.image} 
+							alt={sponsors.shunpike.name}
+							width="180"
+							height="34"
+							raw={true}
+						/>
+					</a>
+				</div>
+
 			</div>
 		</div>
 		<div class="w-full md:w-2/3">
