Donate | Round out Shunpike button

--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -19,7 +19,7 @@ import sponsors from '@data/sponsors.json'
 					<span class="content mb-2 text-center">Tax deductable donation link:</span>
 					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest" class="block">
 						<Image 
-							className="rounded mx-auto p-2 w-auto h-18 bg-[#f4efdf] border-accent-color border-2" 
+							className="rounded-full mx-auto py-3 px-5 w-auto h-18 bg-[#f4efdf] border-accent-color border-2" 
 							src={sponsors.shunpike.image} 
 							alt={sponsors.shunpike.name}
 							width="180"
