Festival | fix spell error

--- a/src/pages/festival/map.astro
+++ b/src/pages/festival/map.astro
@@ -8,7 +8,7 @@
 	<Title title="Festival Map" id="map" />
 	<div class="content">
 		<Markdown>
-			_Comming soon_
+			_Coming soon_
 		</Markdown>
 	</div>
 </FestivalLayout>
