--- a/src/pages/festival/map.astro
+++ b/src/pages/festival/map.astro
@@ -5,10 +5,12 @@
 ---
 
 <FestivalLayout title="Map" active="map">
-	<Title title="Festival Map" id="map" />
-	<div class="content">
-		<Markdown>
-			_Coming soon_
-		</Markdown>
+	<div class="content-container">
+		<Title title="Festival Map" id="map" />
+		<div class="content">
+			<Markdown>
+				_Coming soon_
+			</Markdown>
+		</div>
 	</div>
 </FestivalLayout>
