--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ const postColumns = (index) => {
           <span class="text-gray-300">HONK!</span> FEST WEST
         </span>
         <a href="/festival" class="block text-accent-color tracking-normal sm:mb-2 text-center">
-          SAVE THE DATE » <time itemprop="startDate" class="underline" content="2021-09-18">SEPTEMBER 18TH, 2021</time>
+          EVENT INFO » <time itemprop="startDate" class="underline" content="2021-09-18">SEPTEMBER 18TH, 2021</time>
         </a>
         <span class="block text-title-primary-color text-center hidden md:block" itemprop="location">
           COLUMBIA CITY, SEATTLE, WA
