--- a/src/pages/festival/index.astro
+++ b/src/pages/festival/index.astro
@@ -9,16 +9,16 @@
 		const band = bands[bandId]
 		if (!band && bandId) {
 			return (
-				<span class="font-black text-gray-300">{bandId}</span>
+				<span class="font-black text-gray-300 whitespace-nowrap overflow-hidden overflow-clip block">{bandId}</span>
 			)
 		} else if (!band) {
 			return (
-				<span class="text-gray-300">---</span>
+				<span class="text-gray-300 whitespace-nowrap overflow-hidden overflow-clip block">---</span>
 			)
 		
 		} else {
 			return (
-				<a class="" href={band.url}>{band.name}</a>
+				<a class="whitespace-nowrap overflow-hidden overflow-clip block opacity-90 hover:opacity-100" href={band.url}>{band.name}</a>
 			)
 		}
 	}
@@ -60,8 +60,8 @@
 					{schedule.map((slot) => (
 						<tr class="even:bg-main-color-300 even:bg-opacity-60">
 							<td class="whitespace-nowrap pl-3 py-2">{slot.time}</td>
-							<td class="text-right whitespace-nowrap overflow-hidden overflow-ellipsis pl-6 pr-3 opacity-90 text-accent-color">{bandEl(slot.pp)}</td>
-							<td class="text-right whitespace-nowrap overflow-hidden overflow-ellipsis pl-4 pr-3 opacity-90 text-accent-color">{bandEl(slot.ss)}</td>
+							<td class="text-right pl-6 pr-3 text-accent-color">{bandEl(slot.pp)}</td>
+							<td class="text-right pl-4 pr-3 text-accent-color">{bandEl(slot.ss)}</td>
 						</tr>
 					))}
 				</tbody>	
