Festival Map | darken locations

--- a/src/pages/festival/map.astro
+++ b/src/pages/festival/map.astro
@@ -28,7 +28,7 @@
 			<ol class="content flex flex-wrap p-5">
 				{locations.map((location, i) => (
 					<li class="text-white w-1/2 sm:w-full xl:w-1/2 mb-5 sm:text-right pr-5 sm:pr-0">
-						<span class="text-accent-color font-bold mr-2 text-2xl">{i + 1}</span> <span>{location}</span>	
+						<span class="text-accent-color font-bold mr-2 text-2xl">{i + 1}</span> <span class="opacity-80">{location}</span>	
 					</li>
 				))}
 			</ol>
