Volunteer | Fix Volunteer button

--- a/src/pages/volunteer.astro
+++ b/src/pages/volunteer.astro
@@ -27,10 +27,12 @@ const positions = volunteer_data.positions
 				</a>
 				<p class="content">
 					Katie our HONK! Fest West Volunteer Coordinator would LOVE to hear from you!
-					<br/>
-					Please <a href={volunteer_data.form_url}>» APPLY HERE</a>
 				</p>
-			
+				<a 
+					href={volunteer_data.form_url}
+					class="block font-base text-center rounded antialiased text-gray-200 font-bold flex-none mt-3 bg-accent-color w-full text-lg bg-opacity-80 px-2 hover:bg-opacity-90">
+					» APPLY HERE
+				</a>
 			</div>
 		</div>
 		<div class="w-full md:w-2/3 flex flex-col gap-4 sm:gap-6">
