--- a/src/pages/donate/index.astro
+++ b/src/pages/donate/index.astro
@@ -11,12 +11,20 @@ import sponsors from '@data/sponsors.json'
 	<div class="flex flex-wrap md:flex-nowrap gap-4 sm:gap-6">
 		<div class="w-full md:w-1/3">
 			<div class="content-container">
-				<Title title="Donate" subtitle="Here" center={true} />
 				<div class="flex flex-col items-center">
-					<a href="https://www.paypal.com/donate/?hosted_button_id=EE2WLALDX9GCA" class="block flex items-center mb-5 py-3 px-5 rounded-full bg-main-color-200">
+					<a href="https://venmo.com/honkfestwest" class="flex md:hidden items-center mb-8 py-3 px-5 rounded-full bg-main-color-200">
+						<img 
+							src="https://cdn1.venmo.com/marketing/images/branding/venmo-icon.svg"
+							alt=""
+							width="100" 
+							height="100"
+							class="w-6 mr-2">
+						<span class="block text-lg content">Donate with Venmo</span>
+					</a>
+					<a href="https://www.paypal.com/donate/?hosted_button_id=EE2WLALDX9GCA" class="flex items-center mb-5 py-3 px-5 rounded-full bg-main-color-200">
 						<i class="paypal mr-2"></i> <span class="block text-lg content">Donate with PayPal</span>
 					</a>
-					<span class="content mb-2 text-center">Tax deductable donation link:</span>
+					<span class="content mb-2 text-center">Tax deductable donation method:</span>
 					<a href="https://poweredbyshunpike.org/c/PBS/a/honkfestwest" class="block">
 						<Image 
 							className="rounded-full mx-auto py-3 px-5 w-auto h-18 bg-[#f4efdf] border-accent-color border-2" 
