Festival | Give Update

--- a/src/pages/festival/index.astro
+++ b/src/pages/festival/index.astro
@@ -29,6 +29,8 @@
 		<Title title="September 18th, 2021 in Columbia Park!" />
 		<div class="content">
 			<Markdown>
+				**Yes! It's on!** Rain or shine, HONK! Fest West will be celebrating Seattle's fall weather with beats and brass in Columbia Park. (Updated 09/18/2021) 
+				<br/>
 				- **12pm:** Music starts in Columbia Park in the Columbia City neighborhood of Seattle (4271 Rainier Ave S, Seattle, WA 98118). Two "stages" of music until 7pm!
 				<br/>
 				- **7pm:** Community jam in Columbia Park!!! Bring your instrument and get down with your community!
