--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,15 +27,20 @@ const postColumns = (index) => {
 
     <!-- INFO BLOCK -->
     <section itemscope itemtype="https://schema.org/Event" class="sm:col-span-3 content-container" >
-      <div class="flex flex-col justify-between items-center h-full text-2xl sm:text-3xl font-emphasis font-medium tracking-wide">
-        <span class="block text-title-primary-color text-center mb-2 hidden md:block" itemprop="name">
+      <div class="flex flex-col justify-between items-center h-full text-2xl sm:text-3xl  font-medium tracking-wide">
+        <span class="block text-title-primary-color text-center mb-2 hidden md:block font-emphasis" itemprop="name">
           <span class="text-gray-300">HONK!</span> FEST WEST
         </span>
-        <a href="/festival" class="block text-accent-color tracking-normal sm:mb-2 text-center">
-          FESTIVAL INFO » <time itemprop="startDate" class="underline" content="2021-09-18">SEPTEMBER 18TH, 2021</time>
-        </a>
-        <span class="block text-title-primary-color text-center hidden md:block" itemprop="location">
-          COLUMBIA CITY, SEATTLE, WA
+        <div class="flex flex-col lg:flex-row justify-center items-center md:mb-2 w-full">
+          <span class="hidden sm:block mb-2 lg:mb-0 text-gray-300 tracking-normal md:mr-2 font-emphasis text-center">
+            <time itemprop="startDate" content="2021-09-18">SEPTEMBER 18TH, 2021</time>
+          </span>
+          <a href="/festival" class="w-full text-center md:w-auto text-2xl block font-base rounded antialiased text-gray-200 font-bold flex-none bg-accent-color bg-opacity-80 px-2 hover:bg-opacity-90">
+            » Festival Info
+          </a>
+        </div>
+        <span class="block text-title-primary-color text-center hidden md:block font-emphasis" itemprop="location">
+          <span class="text-gray-300">COLUMBIA CITY</span>, SEATTLE, WA
         </span>
       </div>
     </section>
