--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -77,7 +77,7 @@ import family from '@data/honk-family.json'
 				<div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-7 w-full content my-4 sm:my-5">
 					{family[continent].map((honk) => (
 						<a class="font-bold block w-full flex flex-col text-center items-center" href={honk.url}>
-							<span class="block border-accent-color border-2 rounded border-opacity-80 w-80 p-5 relative top-4 text-2xl">{honk.name}</span>
+							<span class="block border-main-color-50 border-opacity-40 border-4 rounded w-80 pt-2 pb-5 relative top-4 text-2xl">{honk.name}</span>
 							<span class="block bg-main-color-400 px-2 z-10">{honk.location}</span>	
 						</a>
 					))}
