--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,7 @@ const activeLink = (link) => {
 		{navigation.main.map((item) => (
 			<li class="text-2xl sm:text-3xl font-title flex items-center my-2">
 				<a
-					class={` mx-4 sm:mx-2 block hover:accent-color ${activeLink(item.link)}`}
+					class={` mx-4 sm:mx-2 block hover:text-accent-color ${activeLink(item.link)}`}
 					href={ item.link }
 
 				>{ item.name }</a>
