Index | Add post festival content from Jeanette

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -87,6 +87,31 @@ const postColumns = (index) => {
       </div>
     </section>
 
+    <article class="w-full content-container col-span-6">
+      <p>
+        We had an amazing HONK! Fest West 2021, despite COVID restrictions, thanks to all of our volunteers, performers, and everyone who came out to brave the beautiful fall weather! The rain nor the pandemic could not keep the HONK! from the people. We were blown away by how amazing the bands were and how positive the entire day was. Thanks again to all of you for making it a huge success. 
+      </p>
+      <br/>
+      <p>
+        Mark your calendars for the first weekend of June, when we return for HONK! Fest West 2022! Locations to be announced in January!!! We are looking forward to HONKing again with you in 2022! 
+      </p>
+      <br/>
+      <p>
+        Want to see what our photographer, Tobin Holliday, captured for the day?
+        <a class="block" href="http://www.tobinholliday.com/honkfest-west">http://www.tobinholliday.com/honkfest-west</a>
+      </p>
+      <br/>
+      <p>
+        What about the enthusiastically dapper photographer, Espresso Buzz? 
+        <a class="block" href="https://www.espressobuzz.net/Events/2021/09-18-Honk/">https://www.espressobuzz.net/Events/2021/09-18-Honk/</a>
+      </p>
+      <br/>
+      <p>
+        And, as always, our very own Charlie Daniels has his immersive videos on YouTube for your viewing pleasure: 
+        <a class="block" href="https://www.youtube.com/c/MalixePhoto">https://www.youtube.com/c/MalixePhoto</a>
+      </p>
+    </article>
+
     <!-- POST BLURBS -->
     {posts.map((post, index) => (
       <article class={`w-full content-container sm:col-span-6 ${postColumns(index).span}`}>
