--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -9,65 +9,63 @@ import family from '@data/honk-family.json'
 <BaseLayout title="About">
 	<div class="flex flex-col gap-4 sm:gap-6">
 
-		<!-- WHO -->
+		<!-- MISSION -->
 		<article class="content-container">
-			<Title title="Who" subtitle="is HONK! Fest West?"/>
+			<Title title="Our" subtitle="Mission"/>
+			<p class="content">
+				HONK! Fest West is dedicated to the activation of public space through energetic musical performance. 
+			</p>
+		</article>
+
+		<!-- VISION -->
+		<article class="content-container">
+			<Title title="Our" subtitle="Vision"/>
+			<p class="content">
+				Breaking down systemic barriers to inclusion for those underrepresented within our community and underserved by arts in our region. 
+			</p>
+		</article>
+
+		<!-- STORY -->
+		<article class="content-container">
+			<Title title="Our" subtitle="Story"/>
 			<div class="flex w-full flex-wrap md:flex-nowrap">
-				<Image 
-					className="block w-full md:w-auto md:mr-5 mb-3 sm:mb-0 rounded" 
-					src="https://ik.imagekit.io/thegoldendino/hfw/henryart_0A59z8KGn.png?updatedAt=1628230159141" 
-					alt="Henry Art for H!FW"
-					width="233"
-					height="300"
-					tr="b-5_FFFFFF"
-				/>
+				<div>
+					<Image 
+						className="block w-full md:w-auto md:mr-5 mb-3 sm:mb-0 rounded h-auto" 
+						src="https://ik.imagekit.io/thegoldendino/hfw/henryart_0A59z8KGn.png?updatedAt=1628230159141" 
+						alt="Henry Art for H!FW"
+						width="233"
+						height="300"
+						tr="b-5_FFFFFF"
+					/>
+				</div>
 				<p class="content">
-					HONK! Fest West is a non-profit organization dedicated to the activation of public space through energetic musical performance; we are part of a global renaissance of street band culture. HONK! Fest West works to break down systemic barriers to inclusion for those underrepresented within our community and underserved by arts in our region.
-					<br/><br/>
-					Most importantly, HONK! Fest West is YOU!!! HONK! Fest West is open for anyone who would like to pick up an instrument and play, with an instrument being as simple as stomping feet or clapping hands. This allows anyone attending the festival to immediately become part of the experience.		
+					HONK! Fest West is a free, three-day, community-supported music festival devoted to marching bands, drum corps, samba lines, and anything acoustic and mobile that makes a ruckus. This immersive festival occurs annually in June, and is 100% volunteer-run, performed, and organized. HONK! is part of a global renaissance of street band culture, with Seattle’s festival occurring since 2008. 
+
+				<br/><br/>
+
+					HONK! happens in the public spaces of the Seattle area. We are found in the streets and parks. We are found under bridges and on rooftops. We are found in parades marching down your street. We have called Georgetown our home since the festival’s inception, and have also celebrated in Columbia City, White Center, South Park, The Waterfront, Fremont/Gas Works Park, Capitol Hill, Central District, Pioneer Square, Downtown, Seattle Center, and West Seattle.
+
+				<br/><br/>
+
+					Most recently, we had a 1-day HONK! celebration in Columbia City in September 2021.  We are looking forward to being back in action in June 2022 for our traditional 3-day extravaganza! Planning has already begun, so stay tuned! 
 				</p>
 			</div>
 		</article>
 
-		<!-- WHAT -->
+		<!-- DIVERSITY -->
 		<article class="content-container">
-			<Title title="What" subtitle="is HONK! Fest West?"/>
+			<Title title="Diversity" subtitle="and Inclusion"/>
 			<p class="content">
-				HONK! Fest West is a free, three-day, community-supported music festival devoted to marching bands, drum corps, samba lines, and anything acoustic and mobile that makes a ruckus. This immersive festival occurs annually in June, and is 100% volunteer-run, performed, and organized. HONK! is on every continent; with Seattle’s festival occurring since 2008.			
+				HONK! Fest West activates public space to make communities stronger and more connected. The raucously engaging performances provide the universal benefits of celebrating music together with no limitations arising from age, race, gender identity, cultural background, ethnic and indigenous identity, native language, immigration status, ability, religion, education, socioeconomic status, or sexual orientation. HONK! Fest West focuses on cooperative values; participatory culture; breaking down barriers to music and art; introduction to different cultural traditions through music; and the key tenet that anyone can be a part of the experience. 
 			</p>
 		</article>
 
-		<!-- WHEN -->
+		<!-- Become a part of the Organizing Committee! -->
 		<article class="content-container">
-			<Title title="When" subtitle="is HONK! Fest West?"/>
+			<Title title="Become a part of the" subtitle="Organizing Committee!"/>
 			<p class="content">
-				HONK! Fest West occurs annually on the 2nd week of June. We were not able to celebrate in 2020, because...ALIENS!!! In 2021, we are once again unable to hold the festival in June; however, we are hoping against all odds to have something in store for the fall of 2021. We will follow the science and recommendations. Stay tuned here!
-			</p>
-		</article>
-
-		<!-- WHERE -->
-		<article class="content-container">
-			<Title title="Where" subtitle="is HONK! Fest West?"/>
-			<p class="content">
-				HONK! Fest West occurs in the public spaces of the Seattle area. We are found in the streets and parks. We are found under bridges and on rooftops. We are found in parades marching down your street. We have called Georgetown our home since the festival’s inception, and have also celebrated in Columbia City, White Center, South Park, The Waterfront, Fremont/Gas Works Park, Capitol Hill, Central District, Pioneer Square, Downtown, Seattle Center, and West Seattle.
-			</p>
-		</article>
-
-		<!-- WHY -->
-		<article class="content-container">
-			<Title title="Why" subtitle="is HONK! Fest West?"/>
-			<p class="content">
-				HONK! Fest West activates public space to make communities stronger and more connected. The raucously engaging performances provide the universal benefits of celebrating music together with no limitations arising from age, race, gender identity, cultural background, ethnic and indigenous identity, native language, immigration status, ability, religion, education, socioeconomic status, or sexual orientation. HONK! Fest West focuses on cooperative values; participatory culture; breaking down barriers to music and art; introduction to different cultural traditions through music; and the key tenet that anyone can be a part of the experience.		
-			</p>
-		</article>
-
-		<!-- HOW -->
-		<article class="content-container">
-			<Title title="How" subtitle="is HONK! Fest West?"/>
-			<p class="content">
-				We are a completely volunteer-run organization and festival and are currently recruiting Committee Members to fill key roles on our Organizing Committee. We are also seeking non-Committee level roles to help out year-round. If you are interested, head over to our Volunteers page to see some specific roles or just send an email to 
-				<a class="text-accent-color font-bold" href="mailto: info@honkfestwest.org">info@honkfestwest.org</a> for more information.		
-			</p>
+				We are a completely volunteer-run organization and festival and are currently recruiting to fill some key roles on our Committees. We have roles both big and small. If you are interested, head over to our Volunteers page to see some specific roles or just send an email to <a href="mailto:info@honkfestwest.org">info@honkfestwest.org</a> for more information. </p>
 		</article>
 
 		<!-- HONK! FAMILY -->
@@ -77,7 +75,9 @@ import family from '@data/honk-family.json'
 				<div class="grid grid-cols-1 sm:grid-cols-2 gap-4 sm:gap-7 w-full content my-4 sm:my-5">
 					{family[continent].map((honk) => (
 						<a class="font-bold block w-full flex flex-col text-center items-center" href={honk.url}>
-							<span class="block border-main-color-50 border-opacity-40 border-4 rounded w-80 pt-2 pb-5 relative top-4 text-2xl">{honk.name}</span>
+							<div class="block border-main-color-50 border-opacity-40 border-4 rounded w-80 relative top-4 text-2xl">
+								<span class="inline-block relative bottom-4 bg-main-color-400 px-2">{honk.name}</span>
+							</div>
 							<span class="block bg-main-color-400 px-2 z-10">{honk.location}</span>	
 						</a>
 					))}
