--- a/src/pages/volunteer.astro
+++ b/src/pages/volunteer.astro
@@ -16,17 +16,8 @@ const positions = volunteer_data.positions
 		<div class="w-full md:w-1/3">
 			<div class="content-container">
 				<Title title="Sign Up" center={true} />
-				<a href={volunteer_data.form_url} class="block w-2/3 mx-auto my-4 border-2 rounded border-accent-color border-opacity-80 hover:border-opacity-100">
-					<Image 
-						className="w-full" 
-						src={committee["Volunteer Coordinator"].image_url} 
-						alt="Katie our Volunteer Coordinator"
-						width="239"
-						height="239"
-					/>
-				</a>
 				<p class="content">
-					Katie our HONK! Fest West Volunteer Coordinator would LOVE to hear from you!
+					Our HONK! Fest West Volunteer Coordinator would ♥ LOVE ♥ to hear from you!
 				</p>
 				<a 
 					href={volunteer_data.form_url}
