Index | Update info to 2022 festival

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,14 +33,12 @@ const postColumns = (index) => {
         </span>
         <div class="flex flex-col lg:flex-row justify-center items-center md:mb-2 w-full">
           <span class="hidden sm:block mb-2 lg:mb-0 text-gray-300 tracking-normal md:mr-2 font-emphasis text-center">
-            <time itemprop="startDate" content="2021-09-18">SEPTEMBER 18TH, 2021</time>
+            <time itemprop="startDate" content="2022-06-03">JUNE 3 - 5, 2022</time>
           </span>
-          <a href="/festival" class="w-full text-center md:w-auto text-2xl block font-base rounded antialiased text-gray-200 font-bold flex-none bg-accent-color bg-opacity-80 px-2 hover:bg-opacity-90">
-            » Festival Info
-          </a>
+
         </div>
         <span class="block text-title-primary-color text-center hidden md:block font-emphasis" itemprop="location">
-          <span class="text-gray-300">COLUMBIA CITY</span>, SEATTLE, WA
+          <span class="text-gray-300">SEATTLE,</span> WA
         </span>
       </div>
     </section>
